src/objects/CHANNEL_ORDERS__Service_Order__c.object
<CustomObject>
    <fields>
        <fullName>CHANNEL_ORDERS__Auto_Renew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Billing_Currency__c</fullName>
        <formula>Text( CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Default_Contract_Currency__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Contract_Length__c</fullName>
        <inlineHelpText>Length of Contract (In Months).  If your contract does not allow you to override the default Contract Length policy, this field should be left blank.</inlineHelpText>
        <label>Contract Length (Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Created_with_new_COA__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This represents the Service Order record being created with a COA version higher than 1.17.</description>
        <label>Created with new COA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Billing_City__c</fullName>
        <label>Customer Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Billing_Country__c</fullName>
        <label>Customer Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Billing_State__c</fullName>
        <label>Customer Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Billing_Street__c</fullName>
        <label>Customer Billing Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Billing_Zip_Postal_Code__c</fullName>
        <label>Customer Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Name__c</fullName>
        <label>Customer Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Org_ID__c</fullName>
        <inlineHelpText>Please note that Org IDs are case sensitive.</inlineHelpText>
        <label>Customer Org ID (Case Sensitive)</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Shipping_City__c</fullName>
        <label>Customer Shipping City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Shipping_Country__c</fullName>
        <label>Customer Shipping Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Shipping_State__c</fullName>
        <label>Customer Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Shipping_Street__c</fullName>
        <label>Customer Shipping Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer_Shipping_Zip_Postal_Code__c</fullName>
        <label>Customer Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Company Name</label>
        <referenceTo>CHANNEL_ORDERS__Customer__c</referenceTo>
        <relationshipLabel>Service Orders</relationshipLabel>
        <relationshipName>Service_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Date_Customer_Accepted_SFDC_Svc_Agrmnt__c</fullName>
        <description>Date that the customer accepted the SFDC Service Agreement (FOR OEMs only)</description>
        <inlineHelpText>Date that the customer accepted the SFDC Service Agreement (FOR OEMs only)</inlineHelpText>
        <label>Date Customer Accepted SFDC Service Agmt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Date_Partner_Received_Customer_Order__c</fullName>
        <label>Date Partner Received Customer Order</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Date_Service_Order_Received_by_SFDC__c</fullName>
        <inlineHelpText>The date the service order was received by salesforce.com</inlineHelpText>
        <label>Date Service Order Received by SFDC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Auto_Renew_Policy__c</fullName>
        <formula>text( CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Default_Auto_Renew_Policy__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Auto Renew Policy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Default_Contract_Length_Policy_Months__c</fullName>
        <formula>text( CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Default_Contract_Length_Months__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Contract Length Policy (Months)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Error_Comment__c</fullName>
        <label>Error Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Full_Customer_Company_Name__c</fullName>
        <description>This formula field should be only used in places where we need to show both old and new orders.</description>
        <formula>IF( CHANNEL_ORDERS__Created_with_new_COA__c,
    CHANNEL_ORDERS__Customer__r.CHANNEL_ORDERS__Customer_Company_Name__c,
    CHANNEL_ORDERS__Customer_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Customer Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__I_certify__c</fullName>
        <inlineHelpText>Certification that a corresponding customer order has been received.  This is a required field</inlineHelpText>
        <label>I Certify a Corresponding Order Is Rec&apos;d</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Note__c</fullName>
        <formula>&quot;Auto Renew and Contract Term are established on Initial orders.  All Add on orders will follow the terms as defined in your agreement with salesforce.com.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Note:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>Reduction</fullName>
                </value>
                <value>
                    <fullName>Cancellation Order</fullName>
                </value>
                <value>
                    <fullName>Upgrade - Partner App</fullName>
                </value>
                <value>
                    <fullName>Upgrade - Org Edition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Org_Edition_Type__c</fullName>
        <label>Org Edition Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GE</fullName>
                </value>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>UE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Override_Level__c</fullName>
        <label>Override Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Order Item</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Partner_Contract_Rules__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>CHANNEL_ORDERS__Partner_Contract_Terms__c</referenceTo>
        <relationshipLabel>Service Orders</relationshipLabel>
        <relationshipName>Service_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Product_Lines__c</fullName>
        <label># of Products Lines</label>
        <summaryForeignKey>CHANNEL_ORDERS__Service_Order_Detail__c.CHANNEL_ORDERS__Partner_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to all opportunities in the org
User selects one opportunity which is stored on the Service Order</description>
        <inlineHelpText>Lookup to all opportunities in the org, you can select one opportunity which is stored on the Service Order.</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service Orders</relationshipLabel>
        <relationshipName>Service_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Send_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Service_Order_Status1__c</fullName>
        <formula>text( CHANNEL_ORDERS__Service_Order_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Service_Order_Status__c</fullName>
        <label>Service Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Provisioned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__Submitted_By_Email__c</fullName>
        <label>Submitted by email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CHANNEL_ORDERS__X62Org_To_Partner_Org_Email__c</fullName>
        <label>62Org To Partner Org Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Order</label>
    <listViews>
        <fullName>CHANNEL_ORDERS__All</fullName>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Customer_Name__c</columns>
        <columns>CHANNEL_ORDERS__Customer_Org_ID__c</columns>
        <columns>CHANNEL_ORDERS__Auto_Renew__c</columns>
        <columns>CHANNEL_ORDERS__Contract_Length__c</columns>
        <columns>CHANNEL_ORDERS__Service_Order_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CHANNEL_ORDERS__Monica_Service_Order</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>CHANNEL_ORDERS__Service_Order_Status1__c</columns>
        <columns>CHANNEL_ORDERS__Partner_Contract_Rules__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>lam</value>
        </filters>
        <label>Monica Service Order</label>
    </listViews>
    <listViews>
        <fullName>Queue_Test_Service_Order</fullName>
        <filterScope>Queue</filterScope>
        <label>Queue Test</label>
        <queue>Queue_Test</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SO-{00000000}</displayFormat>
        <label>Service Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Autorenew_cannot_be_changed</fullName>
        <active>false</active>
        <errorConditionFormula>and (not(CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Allow_Auto_Renew_Override__c ) , not(CHANNEL_ORDERS__Auto_Renew__c ),ispickval(CHANNEL_ORDERS__Order_Type__c,&quot;Initial&quot;))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Auto_Renew__c</errorDisplayField>
        <errorMessage>Your contract does not allow you to override the default Auto Renew policy.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Autorenew_cannot_be_changed_addon</fullName>
        <active>false</active>
        <errorConditionFormula>and (not(CHANNEL_ORDERS__Auto_Renew__c ),not(ispickval(CHANNEL_ORDERS__Order_Type__c,&quot;Initial&quot;)))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Auto_Renew__c</errorDisplayField>
        <errorMessage>Auto Renew follows the terms of the active customer contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Billing_Country_Code</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
   ISCHANGED(CHANNEL_ORDERS__Customer_Billing_Country__c ), 
      OR (LEN( CHANNEL_ORDERS__Customer_Billing_Country__c) &gt; 2, LEN( CHANNEL_ORDERS__Customer_Billing_Country__c) &lt; 2, 
      NOT( 
         CONTAINS(&quot;JP:US:CA:AD:AE:AL:AM:AO:AT:AZ:BA:BE:BF:BG:BH:BI:BJ:BW:CD:&quot; &amp; 
&quot;CF:CG:CH:CI:CM:CY:CZ:DE:DJ:DK:DZ:EE:EG:EH:ER:ES:ET:FI:FO:FR:&quot; &amp; 
&quot;GA:GB:GE:GH:GI:GL:GM:GN:GQ:GR:GW:HR:HU:IE:IL:IQ:IR:IS:IT:JO:&quot; &amp; 
&quot;KE:KM:KW:LB:LI:LR:LS:LT:LU:LV:LY:MA:MC:MD:ME:MK:ML:MT:MW:MR:&quot; &amp; 
&quot;MU:MZ:NA:NE:NG:NL:NO:OM:PL:PS:PT:QA:RE:RO:RS:RU:RW;SA:SC:&quot; &amp; 
&quot;SD:SE:SI:SK:SL:SM:SN:SO:SY:SZ:TD:TG:TN:TR:TZ:UA:UG:VA:YE:YT:&quot; &amp; 
&quot;YU:ZA:ZM:ZW:AI:AG:AR:AW:BS:BB:BZ:BM:BO:BR:KY:CL:CX:CO:CR:&quot; &amp; 
&quot;CU:DM:DO:EC:SV:FK:GF:GD:GP:GT:GY:HT:HN:JM:KI:MQ:MX:MS:AN:&quot; &amp; 
&quot;NI:PA:PY:PE:PR:KN:LC:VC:GS:SR:TT:TC:UM:UY:VE:VG:VI&quot; &amp; 
&quot;AF:AS:AU:BD:BY:BT:IO:KH:CN:CC:CK:TL:FJ:PF:GU:HM:HK:IN:ID:&quot; &amp; 
&quot;KZ:KP:KR:KG:LA:MO:MG:MY:MV:MH:FM:MN:MM:NR:NP:NC:NZ:NU:NF:MP:&quot; &amp; 
&quot;PK:PW:PG:PH:PN:WS:SG:SB:LK:TW:TJ:TH:TK:TO:TM:TV:UZ:VU:VN:WF&quot;, 
       CHANNEL_ORDERS__Customer_Billing_Country__c)
       )))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Billing_Country__c</errorDisplayField>
        <errorMessage>Please enter a capital 2 digit ISO Country Code.  If you do not know the 2 digit ISO code for your Country, please look at the ISO website at  http://tinyurl.com/isocountrycode</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Contract_Length_cannot_be_changed</fullName>
        <active>false</active>
        <errorConditionFormula>and (not(CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Allow_Contract_Length_Override__c ) , not(isnull( CHANNEL_ORDERS__Contract_Length__c ) ),ispickval(CHANNEL_ORDERS__Order_Type__c,&quot;Initial&quot;))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Contract_Length__c</errorDisplayField>
        <errorMessage>Your contract does not allow you to override the default Contract Length policy.  The Contract length policy for this order will be determined by your contract with salesforce.com.  This field should remain blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Contract_Length_cannot_be_changed_addon</fullName>
        <active>true</active>
        <errorConditionFormula>and ( not(isnull( CHANNEL_ORDERS__Contract_Length__c ) ),not(ispickval(CHANNEL_ORDERS__Order_Type__c,&quot;Initial&quot;)))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Contract_Length__c</errorDisplayField>
        <errorMessage>Contract Length will follow the terms of the existing customer contract.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Contract_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( CHANNEL_ORDERS__Partner_Contract_Rules__c )</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Partner_Contract_Rules__c</errorDisplayField>
        <errorMessage>Contract is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Corresponding_Order_Required</fullName>
        <active>true</active>
        <description>Service orders to salesforce.com require that your organization has received a corresponding customer order</description>
        <errorConditionFormula>ISPICKVAL( CHANNEL_ORDERS__I_certify__c , &apos;No&apos;)</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__I_certify__c</errorDisplayField>
        <errorMessage>Service orders to salesforce.com require that your organization has received a corresponding customer order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__DateCustomerAcceptedSfdcServiceAgmt</fullName>
        <active>true</active>
        <description>DateCustomerAcceptedSfdcServiceAgmt is  required when Service Order is not a cancellation order</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(CHANNEL_ORDERS__Partner_Contract_Rules__r.CHANNEL_ORDERS__Type__c,&quot;ISVForce&quot;)), ISNULL(CHANNEL_ORDERS__Date_Customer_Accepted_SFDC_Svc_Agrmnt__c), 
    OR(ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Initial&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Add-On&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Reduction Order&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Upgrade - Partner App&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Upgrade - Org Edition&quot;) 
    )
)</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Date_Customer_Accepted_SFDC_Svc_Agrmnt__c</errorDisplayField>
        <errorMessage>Date Partner Accepted Salesforce Agreement is a required field for this contract type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__DatePartnerReceivedCustomerOrder</fullName>
        <active>true</active>
        <description>Date_Partner_Received_Customer_Order__c  is  required when Service Order is not a cancellation order</description>
        <errorConditionFormula>AND(ISNULL(CHANNEL_ORDERS__Date_Partner_Received_Customer_Order__c ), 
    OR(ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Initial&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Add-On&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Reduction Order&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Upgrade - Partner App&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Upgrade - Org Edition&quot;) 
    )
)</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Date_Partner_Received_Customer_Order__c</errorDisplayField>
        <errorMessage>Date Partner Received Order is a required field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__ICertify</fullName>
        <active>false</active>
        <description>I_certify__c  is  required when Service Order is not a cancellation order</description>
        <errorConditionFormula>AND(ISPICKVAL(CHANNEL_ORDERS__I_certify__c,&quot;&quot;), 
    OR(ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Initial&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Add-On&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Reduction Order&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Upgrade - Partner App&quot;),
       ISPICKVAL(CHANNEL_ORDERS__Order_Type__c , &quot;Upgrade - Org Edition&quot;) 
    )
)</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__I_certify__c</errorDisplayField>
        <errorMessage>Error: You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__OrderTypeRequired</fullName>
        <active>true</active>
        <description>Need to select a type of Order</description>
        <errorConditionFormula>ISBLANK( TEXT(CHANNEL_ORDERS__Order_Type__c))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Order_Type__c</errorDisplayField>
        <errorMessage>You must select an Order Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Org_ID_is_invalid</fullName>
        <active>true</active>
        <errorConditionFormula>OR(not(begins( CHANNEL_ORDERS__Customer_Org_ID__c ,&quot;00D&quot;)),AND( LEN(CHANNEL_ORDERS__Customer_Org_ID__c) &lt;&gt;15))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Org_ID__c</errorDisplayField>
        <errorMessage>The Org ID you entered does not follow the valid format.  Org IDs should begin with &quot;00D&quot; and be 15 characters in length.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__SendOrderOnInsert</fullName>
        <active>false</active>
        <description>Send order checkbox must be always false on insert</description>
        <errorConditionFormula>AND (
       ISNEW(),
       CHANNEL_ORDERS__Send_Order__c = true
)</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Send_Order__c</errorDisplayField>
        <errorMessage>Send order must be false when first creating a Service order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Service_Order_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(CHANNEL_ORDERS__Service_Order_Status__c, &quot;Draft&quot;)  &amp;&amp; CHANNEL_ORDERS__Service_Start_Date__c &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Service_Start_Date__c</errorDisplayField>
        <errorMessage>Invalid Service Start Date - Service Start Date cannot be entered for past dates.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__Shipping_Country_Code</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
   ISCHANGED(CHANNEL_ORDERS__Customer_Shipping_Country__c), 
      OR (LEN(CHANNEL_ORDERS__Customer_Shipping_Country__c) &gt; 2, LEN(CHANNEL_ORDERS__Customer_Shipping_Country__c) &lt; 2, 
      NOT( 
         CONTAINS(&quot;JP:US:CA:AD:AE:AL:AM:AO:AT:AZ:BA:BE:BF:BG:BH:BI:BJ:BW:CD:&quot; &amp; 
&quot;CF:CG:CH:CI:CM:CY:CZ:DE:DJ:DK:DZ:EE:EG:EH:ER:ES:ET:FI:FO:FR:&quot; &amp; 
&quot;GA:GB:GE:GH:GI:GL:GM:GN:GQ:GR:GW:HR:HU:IE:IL:IQ:IR:IS:IT:JO:&quot; &amp; 
&quot;KE:KM:KW:LB:LI:LR:LS:LT:LU:LV:LY:MA:MC:MD:ME:MK:ML:MT:MW:MR:&quot; &amp; 
&quot;MU:MZ:NA:NE:NG:NL:NO:OM:PL:PS:PT:QA:RE:RO:RS:RU:RW;SA:SC:&quot; &amp; 
&quot;SD:SE:SI:SK:SL:SM:SN:SO:SY:SZ:TD:TG:TN:TR:TZ:UA:UG:VA:YE:YT:&quot; &amp; 
&quot;YU:ZA:ZM:ZW:AI:AG:AR:AW:BS:BB:BZ:BM:BO:BR:KY:CL:CX:CO:CR:&quot; &amp; 
&quot;CU:DM:DO:EC:SV:FK:GF:GD:GP:GT:GY:HT:HN:JM:KI:MQ:MX:MS:AN:&quot; &amp; 
&quot;NI:PA:PY:PE:PR:KN:LC:VC:GS:SR:TT:TC:UM:UY:VE:VG:VI&quot; &amp; 
&quot;AF:AS:AU:BD:BY:BT:IO:KH:CN:CC:CK:TL:FJ:PF:GU:HM:HK:IN:ID:&quot; &amp; 
&quot;KZ:KP:KR:KG:LA:MO:MG:MY:MV:MH:FM:MN:MM:NR:NP:NC:NZ:NU:NF:MP:&quot; &amp; 
&quot;PK:PW:PG:PH:PN:WS:SG:SB:LK:TW:TJ:TH:TK:TO:TM:TV:UZ:VU:VN:WF&quot;, 
       CHANNEL_ORDERS__Customer_Shipping_Country__c)
       )))</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Customer_Shipping_Country__c</errorDisplayField>
        <errorMessage>Please enter a capital 2 digit ISO Country Code. If you do not know the 2 digit ISO code for your Country, please look at the ISO website at http://tinyurl.com/isocountrycode</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CHANNEL_ORDERS__StartDate_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( CHANNEL_ORDERS__Service_Start_Date__c )</errorConditionFormula>
        <errorDisplayField>CHANNEL_ORDERS__Service_Start_Date__c</errorDisplayField>
        <errorMessage>Service Start Date is a required field.</errorMessage>
    </validationRules>
</CustomObject>